--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
           type="range"
           id="jsRange"
           min="0.1"
-          max="5"
+          max="5.0"
           value="2.5"
-          steps="0.1"
+          step="0.1"
         />
       </div>
       <div class="controls__btns">
@@ -25,15 +25,42 @@
         <button id="jsSave">Save</button>
       </div>
       <div class="controls__colors" id="jsColors">
-        <div class="controls__color" style="background-color: #2c2c2c"></div>
-        <div class="controls__color" style="background-color: white"></div>
-        <div class="controls__color" style="background-color: #ff3b30"></div>
-        <div class="controls__color" style="background-color: #ff9500"></div>
-        <div class="controls__color" style="background-color: #ffcc00"></div>
-        <div class="controls__color" style="background-color: #4cd963"></div>
-        <div class="controls__color" style="background-color: #5ac8fa"></div>
-        <div class="controls__color" style="background-color: #0579ff"></div>
-        <div class="controls__color" style="background-color: #5856d6"></div>
+        <div
+          class="controls__color jsColor"
+          style="background-color: #2c2c2c"
+        ></div>
+        <div
+          class="controls__color jsColor"
+          style="background-color: white"
+        ></div>
+        <div
+          class="controls__color jsColor"
+          style="background-color: #ff3b30"
+        ></div>
+        <div
+          class="controls__color jsColor"
+          style="background-color: #ff9500"
+        ></div>
+        <div
+          class="controls__color jsColor"
+          style="background-color: #ffcc00"
+        ></div>
+        <div
+          class="controls__color jsColor"
+          style="background-color: #4cd963"
+        ></div>
+        <div
+          class="controls__color jsColor"
+          style="background-color: #5ac8fa"
+        ></div>
+        <div
+          class="controls__color jsColor"
+          style="background-color: #0579ff"
+        ></div>
+        <div
+          class="controls__color jsColor"
+          style="background-color: #5856d6"
+        ></div>
       </div>
     </div>
     <form class="hidden" id="login-form">
@@ -65,6 +92,6 @@
     <script src="js/background.js"></script>
     <script src="js/todo.js"></script>
     <script src="js/weather.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/paint.js"></script>
   </body>
 </html>
